[tool.poetry]
name = "foxy_grpc"
version = "0.1.0"
description = "GRPC Python Demo"
authors = ["AUTHOR_NAME_HERE"]
readme = "README.md"
packages = [
    { include = "foxy_grpc", from = "source" },
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
foxy_grpc-cli = "foxy_grpc.cli:main"
